# automake-c

./: .gitignore  README  README.md  configure.ac
src/: Makefile.am  bye.c  hello.c
